Fixed broken styles

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -23,6 +23,7 @@ a:active,
 a.active {
     color: #18BC9C;
     outline: none;
+    word-wrap: break-word;
 }
 
 h1,
